common/parser-openapi/src/snapshots/parser_openapi__tests__all_of_schema.snap
---
source: common/parser-openapi/src/lib.rs
expression: "build_registry(\"test_data/all-ofs.json\", Format::Json,\n            metadata(Some(\"petstore\"))).unwrap().export_sdl(false)"
---
type PetstorePet {
	someOtherProperty: String
	id: Int
	name: String
}
type PetstoreQuery {
	pets: [PetstorePet!]
}
type Query {
	petstore: PetstoreQuery!
}
schema {
	query: Query
}

