common/parser-openapi/src/snapshots/parser_openapi__tests__flat_output.snap
---
source: common/parser-openapi/src/lib.rs
expression: registry.export_sdl(false)
---
type Mutation {
	updatePet(input: OpenAPI1PetInput!): OpenAPI1Pet
	addPet(input: OpenAPI1PetInput!): OpenAPI1Pet
	uploadFile(petId: Int!, additionalMetadata: String): OpenAPI1ApiResponse
	placeOrder(input: OpenAPI1OrderInput!): OpenAPI1Order
	createUsersWithListInput(input: [OpenAPI1UserInput!]!): OpenAPI1User
}
type OpenAPI1ApiResponse {
	message: String
	type: String
	code: Int
}
type OpenAPI1Category {
	name: String
	id: Int
}
input OpenAPI1CategoryInput {
	name: String
	id: Int
}
enum OpenAPI1FindPetsByStatusStatus {
	AVAILABLE
	PENDING
	SOLD
}
type OpenAPI1Order {
	complete: Boolean
	status: OpenAPI1OrderStatus
	shipDate: String
	quantity: Int
	petId: Int
	id: Int
}
input OpenAPI1OrderInput {
	complete: Boolean
	status: OpenAPI1OrderStatus
	shipDate: String
	quantity: Int
	petId: Int
	id: Int
}
enum OpenAPI1OrderStatus {
	PLACED
	APPROVED
	DELIVERED
}
type OpenAPI1Pet {
	status: OpenAPI1PetStatus
	tags: [OpenAPI1Tag!]
	photoUrls: [String!]!
	category: OpenAPI1Category
	name: String!
	id: Int
}
input OpenAPI1PetInput {
	status: OpenAPI1PetStatus
	tags: [OpenAPI1TagInput!]!
	photoUrls: [String!]!
	category: OpenAPI1CategoryInput!
	name: String!
	id: Int
}
enum OpenAPI1PetStatus {
	AVAILABLE
	PENDING
	SOLD
}
type OpenAPI1Tag {
	name: String
	id: Int
}
input OpenAPI1TagInput {
	name: String
	id: Int
}
type OpenAPI1User {
	userStatus: Int
	phone: String
	password: String
	email: String
	lastName: String
	firstName: String
	username: String
	id: Int
}
input OpenAPI1UserInput {
	userStatus: Int
	phone: String
	password: String
	email: String
	lastName: String
	firstName: String
	username: String
	id: Int
}
type Query {
	findPetsByStatus(status: OpenAPI1FindPetsByStatusStatus = AVAILABLE): [OpenAPI1Pet!]
	findPetsByTags(tags: [String!]): [OpenAPI1Pet!]
	pet(petId: Int!): OpenAPI1Pet
	inventory: JSON
	order(orderId: Int!): OpenAPI1Order
	loginUser(password: String, username: String): String
	user(username: String!): OpenAPI1User
}
schema {
	query: Query
	mutation: Mutation
}

